--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
     <application
         android:name=".DogsViewerApplication"
         android:allowBackup="true"
-        android:icon="@drawable/husky"
+        android:icon="@drawable/dog"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/husky"
+        android:roundIcon="@drawable/dog"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.LoginActivity">
